--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
