--- a/src/components/pages/projects-page/project-data.json
+++ b/src/components/pages/projects-page/project-data.json
@@ -4,7 +4,7 @@
         "slug": "linq-sql-examples",
         "title": "SQL / LINQ examples",
         "subtitle": "A collection of examples demonstrate Language Integrated Query (LINQ) in C#.",
-        "description": "desc",
+        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
         "description2": null,
         "description3": null,
         "images": [
@@ -19,7 +19,7 @@
             ".NET"
         ],
         "links": {
-            "github": "https://github.com/ruskpr",
+            "github": "https://github.com/ruskpr/csharp-sql-linq-examples",
             "website": "www.github.com/ruskpr"
         },
         "languages": [
@@ -31,8 +31,8 @@
         "slug": "chess",
         "title": "Chess",
         "subtitle": "A chess engine written in C#. Includes sample applications.",
-        "description": "desc",
-        "description2": null,
+        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
+        "description2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
         "description3": null,
         "images": [],
         "tags": [
@@ -52,10 +52,10 @@
         "id": 2,
         "slug": "marketio",
         "title": "market.io",
-        "subtitle": "A web application for buying and selling items.",
-        "description": "desc",
-        "description2": null,
-        "description3": null,
+        "subtitle": "A web platform where users can buy and list items, real estate, jobs, etc.",
+        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
+        "description2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
+        "description3": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
         "images": [
             "https://github.com/ruskpr/marketio/blob/main/images/listings.png?raw=true",
             "https://github.com/ruskpr/marketio/blob/main/images/listing-detail-page.png?raw=true",
