--- a/src/components/pages/projects-page/project-data.json
+++ b/src/components/pages/projects-page/project-data.json
@@ -2,14 +2,18 @@
     {
         "id": 0,
         "slug": "linq-sql-examples",
-        "title": "SQL / LINQ examples",
-        "subtitle": "A collection of examples demonstrate Language Integrated Query (LINQ) in C#.",
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
-        "description2": null,
-        "description3": null,
+        "title": "SQL / LINQ queries",
+        "type": "Personal Project",
+        "subtitle": "A collection of examples that demonstrate Language Integrated Query (LINQ) in C#.",
+        "description": "Language Integrated Query (LINQ) is a Microsoft .NET Framework component that adds language-level data querying capabilities.",
+        "description2": "The purpose of this project is to demonstrate the use of LINQ in C# by querying data from a Microsoft's 'Northwind' sample database. The project includes a WPF application that allows the user to query data from a SQLite database (and a SQL Server database if you decide to configure it that way).",
+        "description3": "Alternatively, the project can be used as a template for any C# WPF application where you plan to use LINQ as it is structured in a way that allows for easy modification and configuration.",
         "images": [
+            "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/example-query.png?raw=true",
             "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/home.png?raw=true",
-            "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/example-query.png?raw=true"
+            "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/code-snippet.png?raw=true",
+            "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/example-query2.png?raw=true",
+            "https://github.com/ruskpr/csharp-sql-linq-examples/blob/main/Images/example-query3.png?raw=true"
         ],
         "tags": [
             "SQLite",
@@ -30,18 +34,24 @@
         "id": 1,
         "slug": "chess",
         "title": "Chess",
+        "type": "Personal Project",
         "subtitle": "A chess engine written in C#. Includes sample applications.",
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
-        "description2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
+        "description": "This project contains a chess engine written in C# that has all of the features to play a full game of chess. I began developing this as a school project which I eventually presented in my final year. Even though the project is essentially complete, I still continue to work on it and add new features as I find it to be a great way to learn new things. The project includes a console application and desktop application with UDP multiplayer capabilities.",
+        "description2": "During the time that I spend developing this project while I was in school, I gained knowledge of many object-oriented programming principles. The pieces are abstracted into their own classes with their own unique movement logic. The board is a 2d array of pieces and is responsible for validating moves, checking for checkmate, and other game-related logic.",
         "description3": null,
-        "images": [],
+        "images": [
+            "https://github.com/ruskpr/Chess/blob/master/Images/fools-mate.png?raw=true",
+            "https://github.com/ruskpr/Chess/blob/master/Images/join-server.png?raw=true",
+            "https://github.com/ruskpr/Chess/blob/master/Images/playing-online.png?raw=true",
+            "https://github.com/ruskpr/Chess/blob/master/Images/console-chess.png?raw=true"
+        ],
         "tags": [
             ".NET",
             "UDP Multiplayer",
             "AI Algorithms"
         ],
         "links": {
-            "github": null,
+            "github": "https://github.com/ruskpr/Chess",
             "website": null
         },
         "languages": [
@@ -52,6 +62,7 @@
         "id": 2,
         "slug": "marketio",
         "title": "market.io",
+        "type": "Personal Project",
         "subtitle": "A web platform where users can buy and list items, real estate, jobs, etc.",
         "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
         "description2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet sagittis id consectetur purus ut. Viverra aliquet eget sit amet. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Aliquam ultrices sagittis orci a. Dolor sit amet consectetur adipiscing. Ultricies mi quis hendrerit dolor magna eget. Morbi blandit cursus risus at ultrices mi. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Lectus quam id leo in vitae turpis massa sed. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a.",
@@ -65,7 +76,9 @@
         "tags": [
             "Blazor",
             "ASP.NET Core",
-            "Web API"
+            "SQL Server",
+            "Web API",
+            "Bootstrap"
         ],
         "links": {
             "github": "https://github.com/ruskpr",
