--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "ruskpr-portfolio",
   "version": "0.1.0",
   "homepage": "https://ruskpr.github.io",
   "private": true,
