--- a/src/components/pages/projects-page/project-data.json
+++ b/src/components/pages/projects-page/project-data.json
@@ -66,7 +66,7 @@
         "title": "market.io",
         "type": "Personal Project",
         "subtitle": "A web platform where users can buy and list items, real estate, jobs, etc.",
-        "description": "",
+        "description": "See the Github repository for a detailed overview of this project.",
         "description2": null,
         "description3": null,
         "images": [
