--- a/src/components/pages/projects-page/project-data.json
+++ b/src/components/pages/projects-page/project-data.json
@@ -94,8 +94,7 @@
             "Bootstrap"
         ],
         "links": {
-            "github": "https://github.com/ruskpr",
-            "website": "www.github.com/ruskpr"
+            "github": "https://github.com/ruskpr/marketio"
         },
         "languages": [
             "C#",
